[gd_scene load_steps=2 format=3 uid="uid://blnlfyhwh3av6"]

[ext_resource type="Script" path="res://spawner/spawner.gd" id="1_7421v"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_7421v")

[node name="Nutrient_Timer" type="Timer" parent="."]

[node name="Droplet_Timer" type="Timer" parent="."]

[node name="Hazard_Timer" type="Timer" parent="."]
